--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-streamlit
-pandas==1.4.4
+streamlit==1.12.0
+pandas==1.3.4
 matplotlib==3.8.3
 seaborn==0.13.2
 folium==0.14.0
 plotly==5.14.1
-pip==21.2.4
+shapely==2.0.2
 branca==0.6.0
-shapely
+streamlit-folium==0.13.0
+streamlit-option-menu==0.3.6
+numpy==1.21.2
+setuptools>=68.0
+wheel>=0.38.4
+pip>=24.0
