--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ shapely==2.0.2
 branca==0.6.0
 streamlit-folium==0.13.0
 streamlit-option-menu==0.3.6
-numpy==1.21.2
+numpy>=1.26.0
 setuptools>=68.0
 wheel>=0.38.4
-pip>=24.0
+pip>=25.0
