--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
 streamlit
-pandas==1.3.4
-matplotlib==3.8.3
-seaborn==0.13.2
-folium==0.14.0
-plotly==5.14.1
-shapely==2.0.2
-branca==0.6.0
-streamlit-folium==0.13.0
-streamlit-option-menu==0.3.6
-numpy>=1.26.0
-setuptools>=68.0
-wheel>=0.38.4
-pip>=25.0
+pandas
+matplotlib
+seaborn
+json
+folium
+plotly
+branca
+shapely
+streamlit-folium
+streamlit-option-menu
